[tool.poetry]
name = "bot_dice"
version = "0.1.0"
description = "Telegram Dice Bot"
authors = ["Vladimir Kasatkin <vladimirkasatkinbackend@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
aiogram = "2.11.2"

[tool.poetry.dev-dependencies]
nose = "1.3.7"
freezegun = "1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
